# firecrawl

./: CLEANUP_PLAN.md  FINAL_STRUCTURE.md  ITERATION_2026-01-02_SUMMARY.md  NEXT_ITERATION_PLAN.md  QUICKSTART_CLEANUP.md  README.md  REFACTORING_SUMMARY.md  SHARED_TASK_NOTES.md
firecrawl-standalone/: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
firecrawl-standalone/examples/: basic_scrape.py  browser_scrape.py  crawl_website.py
firecrawl-standalone/firecrawl/: __init__.py  cli.py  crawler.py  scraper.py  types.py
firecrawl-standalone/firecrawl/engines/: __init__.py  base.py  http.py  playwright.py
firecrawl-standalone/firecrawl/parsers/: __init__.py  markdown.py
firecrawl-standalone/firecrawl/utils/: __init__.py  filters.py  robots.py
firecrawl-standalone/tests/: __init__.py  test_scraper.py
